fix: Content and nav links have no spacing between them

--- a/themes/statusline/assets/sass/_navbar.scss
+++ b/themes/statusline/assets/sass/_navbar.scss
@@ -89,6 +89,7 @@ nav {
 		width: 100%;
 
 		margin-top: 1rem;
+		margin-bottom: 0.5rem;
 		padding: 0.5rem;
 		background-color: $background-color-darker;
 
